[gd_scene load_steps=5 format=2]

[ext_resource path="res://Music/DOS-88_Flow_State.ogg" type="AudioStream" id=1]
[ext_resource path="res://Music/Music.gd" type="Script" id=2]
[ext_resource path="res://Music/Crash Landing.ogg" type="AudioStream" id=3]
[ext_resource path="res://Music/Smooth Sailing.ogg" type="AudioStream" id=5]

[node name="Music" type="Node"]
script = ExtResource( 2 )

[node name="StartMusicTween" type="Tween" parent="."]

[node name="StopMusicTween" type="Tween" parent="."]

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
bus = "Music"

[node name="InGameMusicSad" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music"

[node name="InGameMusicHappy" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Music"
